--- a/portfolio.html
+++ b/portfolio.html
@@ -141,9 +141,48 @@
 
     <footer class="footer">
         <div class="container">
-            <!-- Logo --> 
-            <a class="logo-link" href="./index.html">Web<span class="studio">Studio</span></a>
-            <p class="text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+            <ul class="foot-ul">
+                <li class="foot-li one">
+                    <!-- Logo -->
+                    <a class="logo-link" href="./index.html">Web<span class="studio">Studio</span></a>
+                    <p class="text">Increase the flow of customers and sales for your business with digital marketing &
+                        growth solutions.</p>
+                </li>
+                <li class="foot-li two">
+                    <section class="social-media">
+                        <h3 class="soc-media-titel">Social media</h3>
+                        <ul class="foot-social-list">
+                            <li class="foot-social-item">
+                                <a class="foot-social-link" href="#">
+                                    <svg class="foot-social-icon">
+                                        <use href="./images/icons.svg#sozial-instagram"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="foot-social-item">
+                                <a class="foot-social-link" href="#">
+                                    <svg class="foot-social-icon">
+                                        <use href="./images/icons.svg#sozial-twitter"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="foot-social-item">
+                                <a class="foot-social-link" href="#">
+                                    <svg class="foot-social-icon">
+                                        <use href="./images/icons.svg#sozial-facebook"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="foot-social-item">
+                                <a class="foot-social-link" href="#">
+                                    <svg class="foot-social-icon">
+                                        <use href="./images/icons.svg#sozial-linkedin"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
+                </li>
+            </ul>
         </div>
     </footer>
 </body>
