--- a/index.html
+++ b/index.html
@@ -53,6 +53,51 @@
         <section class="features section">
             <div class="container">
                 <h2 class="section-titel hidden">Features</h2>
+                <ul class="features-li">
+                    <li class="f-li">
+                        <div class="icon-li">
+                            <svg class="icon-features">
+                                <use href="./images/icons.svg#icon-1-antenna"></use>
+                            </svg>
+                        </div>
+                        <h3 class="f-li-titel">Strategy</h3>
+                        <p class="text">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
+                    </li>
+                    <li class="f-li">
+                        <div class="icon-li">
+                            <svg class="icon-features">
+                                <use href="./images/icons.svg#icon-2-clock"></use>
+                            </svg>
+                        </div>
+                        <h3 class="f-li-titel">Punctuality</h3>
+                        <p class="text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                    </li>
+                    <li class="f-li">
+                        <div class="icon-li">
+                            <svg class="icon-features">
+                                <use href="./images/icons.svg#icon-3-diagram"></use>
+                            </svg>
+                        </div>
+                        <h3 class="f-li-titel">Diligence</h3>
+                        <p class="text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                    </li>
+                    <li class="f-li">
+                        <div class="icon-li">
+                            <svg class="icon-features">
+                                <use href="./images/icons.svg#icon-4-astronaut"></use>
+                            </svg>
+                        </div>
+                        <h3 class="f-li-titel">Technologies</h3>
+                        <p class="text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                    </li>
+                </ul>
+            </div>
+        </section>
+
+        <!-- Описание
+        <section class="features section">
+            <div class="container">
+                <h2 class="section-titel hidden">Features</h2>
                 <ul class="features-icon">
                     <li class="icon-li">
                         <svg class="icon-features">
@@ -77,11 +122,6 @@
                 </ul>
                 <ul class="features-li">
                     <li class="f-li">
-                        <!--<div class="box-icon">
-                            <svg class="icon-features">
-                                <use href="./images/icons.svg#icon-1-antenna"></use>
-                            </svg>
-                        </div>-->
                         <h3 class="f-li-titel">Strategy</h3>
                         <p class="text">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
                     </li>
@@ -97,7 +137,8 @@
                 </ul>
             </div>
         </section>
-            
+    -->
+        
         <!-- Чем мы занимаемся -->
         <section class="what-are-we-doing section">
             <div class="container">
