--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
                     <p class="text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
                 </li>
                 <li class="foot-li two">
-                    <section class="social-media">
+                    <div class="social-media">
                     <h3 class="soc-media-titel">Social media</h3>
                     <ul class="foot-social-list">
                         <li class="foot-social-item">
